# seg_eval

./: .gitignore  Capfile  Gemfile
app/assets/stylesheets/: custom.css.scss  datasets.scss
app/controllers/: algorithms_controller.rb  datasets_controller.rb  results_controller.rb  users_controller.rb
app/helpers/: application_helper.rb  sessions_helper.rb
app/models/: algorithm.rb  dataset.rb  result.rb  user.rb
app/views/algorithms/: .#_algorithm.html.erb  _algorithm.html.erb  index.html.erb  new.html.erb  show.html.erb
app/views/datasets/: _dataset.html.erb  index.html.erb  new.html.erb  show.html.erb
app/views/results/: _result.html.erb  new.html.erb  show.html.erb
app/views/sessions/: new.html.erb
app/views/users/: index.html.erb  new.html.erb  show.html.erb
config/: deploy.rb  puma.rb  routes.rb
db/: schema.rb
db/migrate/: 20150707182418_add_frame_to_dataset.rb  20150713164258_add_ground_truth_to_datasets.rb  20150721115018_create_results.rb  20151029120540_fix_datasets_column_names.rb  20151102171428_add_public_to_results.rb  20151103123524_remove_code_from_algorithms.rb  20151110132310_add_first_and_last_name_to_users.rb  20151117105434_add_source_code_url_to_algorithms.rb  20151117161125_change_filetype_to_programming_language_in_algorithms.rb  20151119141144_add_config_file_to_datasets.rb  20160105194738_add_acceptable_segmentation_region_to_datasets.rb
scripts/dice_coefficient/src/: CMakeLists.txt  (+1 more)
scripts/mha_to_png/src/: CMakeLists.txt  mha_to_png.cxx
shared/pids/: puma.state
test/fixtures/: results.yml
(+2 files in other folders)
